Refactor repository implementations to use interfaces, enhance user and product handling, and improve cart functionality
- Updated ProductRepoImpl and UserRepoImpl to implement their respective interfaces.
- Added category normalization in ProductRepoImpl during product merging.
- Enhanced CartService to allow specifying quantity when adding items to the cart.
- Improved UserService to check for existing emails during registration.
- Updated CustomUserDetails to return user roles as authorities.
- Refactored various JSP views to streamline navigation and improve user experience.
- Added toast notifications for user feedback on registration errors.
- Adjusted CSS for better layout in cart view.
- Updated JavaScript for cart actions to use FormData for better handling of form submissions.